<resources>
    <string name="app_name">Попутчик</string>
    <string name="registration">РЕГИСТРАЦИЯ</string>
    <string name="enter_your_data">ВВЕДИТЕ ВАШИ ДАННЫЕ</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="driver">Водитель</string>
    <string name="user">Пользователь</string>
    <string name="uato_model">Модель авто</string>
    <string name="number_phone">Номер телефона</string>
    <string name="chose_the_image">ВЫБЕРИТЕ ФОТО</string>
    <string name="APP_NAME">Попутчик</string>
    <string name="sign_in">Вход</string>
    <string name="registration_or_sign_in">Вход или регистрация</string>
    <string name="name">Ваше имя</string>
    <string name="from">Откуда (город)</string>
    <string name="to">Куда (город)</string>
    <string name="adress_from">Точный адрес</string>
    <string name="time_start">Время отправления</string>
    <string name="time_finish">Время прибытия</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="date">Выберите дату</string>
    <string name="add_travel">Создай поездку!</string>
    <string name="map">Карта</string>
    <string name="KEY_MAP">AIzaSyAXX25tP47S27_Z3olquHCogs2SuKmQziA</string>
    <string name="title_activity_maps">Map</string>
    <string name="about">О поездке</string>
    <string name="year">Возраст</string>
    <string name="car_name">Авто</string>
    <string name="ok">Сохранить</string>
    <string name="card">Номер карты</string>
    <string name="about_me">О себе</string>
    <string name="car_year">Год выпуска авто</string>
    <string name="how_many_people">Сколько свободных мест</string>
    <string name="my_travels">Мои поездки</string>
    <string name="travel">Поездка</string>
    <string name="zayavki">Заявки</string>
    <string name="my_z">Мои заявки</string>
    <string name="you_go_to_travel">Вас одобрили как попутчика:</string>
    <string name="add_review">Оставить отзыв</string>
    <string name="set_rating">Поставить оценку</string>
    <string name="finish_travel">Поездка окончена</string>
    <string name="rat">Оцените водителя!</string>
    <string name="rew">Оставьте отзыв</string>
    <string name="add_review_all">Здесь Вы можете посмотреть и оставить отзывы о пользователях!</string>
    <string name="add_travel_companion">Нужно подвезти!</string>
    <string name="second_data">Дополнительные данные</string>
    <string name="cost">Укажите цену</string>
    <string name="message_one_user">Сообщение</string>
    <string name="message_all_users">Сообщение всем разработчикам</string>
    <string name="choice_one_user">Выберите пользователя</string>
    <string name="send">Отправить</string>
    <string name="message_all_user">Сообщение всем пользователям</string>
    <string name="understand">Понятно!</string>
    <string name="message_from_admin">Сообщение от администрации</string>
    <string name="documentation">Правила регистрации</string>
    <string name="message">Для регистрации в приложении Попутчик необходимо воодить ТОЛЬКО реальные данные. E-mail должен содержать такие знаки как @ и . что свидетельствует о правильности введенной информации. Пароль должен состоять из букв латинского алфавита и цифр. Можно употреблять заглавные буквы. Знаки использовать нельзя. Минимальная длина пароля должна быть - не менее 7 символов.</string>
</resources>