<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.poputchic.android.activities.person_rooms.EditDriverProfile">
    <ScrollView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_driver_name"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/edit_driver_email"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/edit_driver_year"
                android:hint="@string/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/edit_driver_phone"
                android:hint="@string/number_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/edit_driver_auto"
                android:hint="@string/car_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/b_driver_cancel"
                    android:layout_margin="3dp"
                    android:background="@color/yallou"
                    android:text="@string/cancel"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/b_driver_save"
                    android:layout_margin="3dp"
                    android:background="@color/yallou"
                    android:text="@string/ok"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
