<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/container_companion_edit"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.poputchic.android.activities.person_rooms.EditCompanionProfile">
    <ScrollView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_driver_name_c"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/edit_driver_email_c"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/edit_driver_year_c"
                android:hint="@string/year"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/edit_driver_phone_c"
                android:hint="@string/number_phone"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/edit_driver_about_c"
                android:hint="@string/about_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/b_driver_cancel_c"
                    android:layout_margin="3dp"
                    android:background="@color/yallou"
                    android:text="@string/cancel"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/b_driver_save_c"
                    android:layout_margin="3dp"
                    android:background="@color/yallou"
                    android:text="@string/ok"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/edit_companion"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</FrameLayout>
