<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/add_container"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddTravel"
    android:padding="3dp">

    <ScrollView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="25sp"
                android:textColor="@color/black_100"
                android:gravity="center"
                android:text="@string/add_travel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <AutoCompleteTextView
                        android:id="@+id/e_et_from"
                        android:hint="@string/from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/e_et_pointer_adress_1"
                        android:hint="@string/adress_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <Button
                    android:background="@color/yallou"
                    android:text="@string/map"
                    android:id="@+id/b_onMap_start"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>



            <View
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/black_100"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <AutoCompleteTextView
                        android:id="@+id/e_et_to"
                        android:hint="@string/to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/e_et_pointer_adress_2"
                        android:hint="@string/adress_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <Button
                    android:background="@color/yallou"
                    android:text="@string/map"
                    android:id="@+id/b_onMap_finish"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <View
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/black_100"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <Button
                android:text="@string/date"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:id="@+id/e_b_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_margin="2dp"
                    android:background="@color/yallou"
                    android:text="@string/time_start"
                    android:id="@+id/e_b_time_start"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:layout_margin="2dp"
                    android:background="@color/yallou"
                    android:text="@string/time_finish"
                    android:id="@+id/e_b_time_finish"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <EditText
                android:id="@+id/e_about"
                android:hint="@string/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TableRow
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:text="@string/cancel"
                    android:id="@+id/e_b_cancel"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:text="@string/save"
                    android:id="@+id/e_b_go"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/f_pb_"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</FrameLayout>