<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/a_fl_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.reg_and_sign.Registration">
    <ImageView
        android:id="@+id/image_back_registration"
        android:src="@drawable/background"
        android:layout_width="match_parent"
        android:scaleX="10"
        android:scaleY="2"
        android:layout_height="match_parent" />
    <ScrollView
        android:id="@+id/scroll_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Toolbar
                android:id="@+id/toolbar_reg"
                android:background="#3000"
                android:elevation="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <TextView
                    android:layout_gravity="center"
                    android:textSize="22sp"
                    android:fontFamily="@font/comforta_regular"
                    android:textColor="@color/yallou"
                    android:text="@string/APP_NAME"
                    android:id="@+id/a_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </Toolbar>
            <View
                android:id="@+id/shadow_reg"
                android:layout_below="@+id/toolbar_reg"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/toolbar_dropshadow"/>
            <TextView
                android:id="@+id/a_text_reg"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:layout_below="@id/shadow_reg"
                android:textColor="@color/black_100"
                android:textSize="20sp"
                android:fontFamily="@font/comforta_regular"
                android:text="@string/registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:padding="15dp"
                android:background="#5fff"
                android:layout_below="@id/a_text_reg"
                android:orientation="vertical"
                android:layout_width="300dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/enter_your_data"
                    android:gravity="center"
                    android:id="@+id/enter_your_data_reg"
                    android:fontFamily="@font/comforta_light"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_margin="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/a_et_email"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/comforta_light"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/a_et_password"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:fontFamily="@font/comforta_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/a_et_password_confirm"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:fontFamily="@font/comforta_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioGroup
                    android:gravity="start"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:onClick="click_buttons"
                        android:id="@+id/a_cb_driver"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:fontFamily="@font/comforta_light"
                        android:text="@string/driver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:onClick="click_buttons"
                        android:id="@+id/a_cb_companion"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="@font/comforta_light"
                        android:text="@string/user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RadioGroup>

                <EditText
                    android:id="@+id/a_et_name"
                    android:hint="@string/name"
                    android:fontFamily="@font/comforta_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/a_et_number_of_phone"
                    android:inputType="phone"
                    android:hint="@string/number_phone"
                    android:fontFamily="@font/comforta_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.CardView
                    app:cardElevation="5dp"
                    app:cardCornerRadius="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:onClick="click_buttons"
                        android:id="@+id/a_b_registration"
                        android:fontFamily="@font/comforta_light"
                        android:text="@string/registration"
                        android:background="@color/yallou"
                        android:layout_width="150dp"
                        android:layout_height="50dp"/>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/a_pb"
        app:indicatorName="BallRotateIndicator"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</FrameLayout>
